Added SEO and Refactor App structure
To accomplish this I did the following:
- Renamed path location for styles.css to "assets/css/style.css"
- Renamed path location for script.js to "assets/css/script.js"
- Added SEO best practice at the <head/> section in index.html
- Included a favicon icon "assets/images/pixelg_logo.PNG"

--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="./assets/images/pixelg_logo.png" type="image/*" rel="shortcut icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+      content="PixelG is a web-based tool designed for converting images into pixelated versions, 
+      allowing users to adjust resolution and colors. It provides an intuitive and efficient way 
+      to create pixel art directly in the browser." />
+    <meta name="keywords"
+    content="PixelG is a web-based tool designed for converting images into pixelated versions, 
+    allowing users to adjust resolution and colors. It provides an intuitive and efficient way 
+    to create pixel art directly in the browser." />
+    <meta property="og:title" content="PixelG - Pixel Art Converter" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://isamytanaka.github.io/PixelG/" />
+    <meta property="og:description"
+    content="PixelG is a web-based tool designed for converting images into pixelated versions, 
+    allowing users to adjust resolution and colors. It provides an intuitive and efficient way 
+    to create pixel art directly in the browser." />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:locale" content="en_EN" />
+    <meta property="og:site_name" content="PixelG" />
+    <meta property="og:url" content="https://isamytanaka.github.io/PixelG/" />
+    <meta property="twitter:title" content="PixelG - Pixel Art Converter" />
+    <meta property="twitter:description"
+    content="PixelG is a web-based tool designed for converting images into pixelated versions, 
+    allowing users to adjust resolution and colors. It provides an intuitive and efficient way 
+    to create pixel art directly in the browser." />
+    <meta property="twitter:site" content="https://isamytanaka.github.io/PixelG/" />
     <title>PixelG - Pixel Art Converter</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
@@ -110,7 +136,7 @@
     </a>
     </p>
 </footer>
-<script src="script.js"></script>
+<script src="./assets/js/script.js"></script>
 
 </body>
 </html>
