add: favicon and <link rel="icon"> tag with project logo
add: favicon and <link rel="icon"> tag with project logo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="en">
 <head>
+        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/isamytanaka/PixelG/refs/heads/main/file_00000000e6d451fa972797d2a2a6b474_conversation_id%3D67ee70ea-59f8-8004-82c6-d76560f6779f%26message_id%3D6b592ece-78a7-40d0-b9e0-b30939c1beb5.PNG">
     <meta charset="UTF-8">
     <link href="./assets/images/pixelg_logo.png" type="image/*" rel="shortcut icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
