--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </a>
     </p>
 </footer>
-<script src="./assets/js/script.js"></script>
+<script src="./assets/script.js"></script>
 
 </body>
 </html>
